repo dispatch types

--- a/.github/workflows/external-event.yaml
+++ b/.github/workflows/external-event.yaml
@@ -1,12 +1,14 @@
 # the workflow is triggered to run based on an external action.
 # Must be pushed to our default main branch.
 
+# note: env is expected in the postman client_payload, must match
+
 name: External Events
 on:
   repository_dispatch:
-
+    types: [build]
 jobs:
   echo-a-string:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "Repository Dispatch"
+      - run: echo ${{ github.event.client_payload.env }}
