--- a/.github/workflows/expressions-and-contexts.yaml
+++ b/.github/workflows/expressions-and-contexts.yaml
@@ -8,6 +8,7 @@
 #------------------------------------------------------------------
 name: Expressions & Contexts
 on: [push, pull_request, issues, workflow_dispatch]
+run-name: "Expressions & Contexts by @${{ github.actor }}, event: ${{github.event_name}}"
 
 jobs:
   using-expressions-and-contexts:
