--- a/.github/workflows/if-statement.yaml
+++ b/.github/workflows/if-statement.yaml
@@ -11,6 +11,13 @@ on: [push, pull_request, issues, workflow_dispatch]
 run-name: "If Statement by @${{ github.actor }}, event: ${{github.event_name}}"
 
 jobs:
+  runs-on-issues-and-prs:
+    runs-on: ubuntu-latest
+    if: contains(fromJson('["issues", "pull_request"]'), github.event_name)
+    steps:
+      - name: Run only if issue has a bug label
+        if: contains(github.event.issue.labels.*.name, 'bug')
+        run: echo ${{ join(github.event.issue.labels.*.name, ', ')}}
   using-expressions-and-contexts:
     runs-on: ubuntu-latest
     if: github.event_name == 'push'
@@ -28,5 +35,6 @@ jobs:
           echo ${{ true || (false && true) }}
       - name: Dump Contexts
         run: |
+          echo '${{ toJson(github) }}' 
           echo '${{ toJson(job) }}'
           echo '${{ toJson(runner) }}'
