--- a/.github/workflows/env-vars.yaml
+++ b/.github/workflows/env-vars.yaml
@@ -7,11 +7,26 @@
 name: Environment Variables
 on: [push]
 
+env:
+  WF_LEVEL_ENV: Available to all jobs
 jobs:
   env-vars-and-context:
     runs-on: ubuntu-latest
+    # processed before reaches runner machine, so u must use it this way
+    if: github.ref == 'refs/heads/main'
+    env:
+      # available only to 'env-vars-and context' job (local)
+      JOB_LEVEL_ENV: Available to all steps in env-vars-and context job
     steps:
       - name: Log ENV VAR
         run: echo $GITHUB_REF
-      - name: Log COntext
+      - name: Log Context
         run: echo '${{ github.ref }}'
+      - name: Log Custom ENV Vars
+        env:
+          STEP_LEVEL_ENV: Available only to this step
+          WF_LEVEL_ENV: Overriden in step
+        run: |
+          echo '${{ env.STEP_LEVEL_ENV }}' # evaluated by github actions, not runner machine, ok to use in if-statemtn
+          echo $STEP_LEVEL_ENV             # evaluated on runner machine, cannot use in if-statement
+          echo $JOB_LEVEL_ENV
