Dynamic Var Set in GITHUB_ENV

--- a/.github/workflows/env-vars.yaml
+++ b/.github/workflows/env-vars.yaml
@@ -22,6 +22,10 @@ jobs:
         run: echo $GITHUB_REF
       - name: Log Context
         run: echo '${{ github.ref }}'
+      - name: Set Environment Variable
+        run: |
+          echo "NEW_ENV_VAR=$(date)" >> "$GITHUB_ENV"
+          echo "JOB_LEVEL_ENV=$RANDOM" >> "$GITHUB_ENV"
       - name: Log Custom ENV Vars
         env:
           STEP_LEVEL_ENV: Available only to this step
@@ -31,3 +35,4 @@ jobs:
           echo $STEP_LEVEL_ENV             # evaluated on runner machine, cannot use in if-statement
           echo $WF_LEVEL_ENV
           echo $JOB_LEVEL_ENV
+          echo $NEW_ENV_VAR
