--- a/.github/workflows/env-vars.yaml
+++ b/.github/workflows/env-vars.yaml
@@ -26,6 +26,14 @@ jobs:
         run: |
           echo "NEW_ENV_VAR=$(date)" >> "$GITHUB_ENV"
           echo "JOB_LEVEL_ENV=$RANDOM" >> "$GITHUB_ENV"
+      - name: Multiline Environment Variable
+        run: |
+          DELIMITER=1234
+          echo "RANDOM_JOKE<<$DELIMITER" >> "$GITHUB_ENV"
+          echo "Here is a joke: " >> "$GITHUB_ENV"
+          curl -s https://icanhazdadjoke.com/ >> "$GITHUB_ENV"
+          echo "" >> "$GITHUB_ENV"
+          echo "$DELIMITER" >> "$GITHUB_ENV"
       - name: Log Custom ENV Vars
         env:
           STEP_LEVEL_ENV: Available only to this step
@@ -36,3 +44,13 @@ jobs:
           echo $WF_LEVEL_ENV
           echo $JOB_LEVEL_ENV
           echo $NEW_ENV_VAR
+          echo $RANDOM_JOKE
+
+#------------------------------------------------------------------------------
+# https://docs.github.com/en/actions/reference/workflows-and-actions/variables
+#
+# $GITHUB_ENV is a runner-provided file. Writing KEY=value to it tells the runner
+# to set that environment variable for subsequent steps in the same job.
+# syntax (key=value)
+# echo "{environment_variable_name=kalle}" >> "GITHUB_ENV"
+#------------------------------------------------------------------------------
