--- a/.github/workflows/vars-and-secrets.yaml
+++ b/.github/workflows/vars-and-secrets.yaml
@@ -4,6 +4,7 @@ on: [push]
 jobs:
   log-variables:
     runs-on: ${{ vars.JOBS_RUNNER }}
+    environment: "production"
     env:
       # make this local to this job in this env:
       BOOLEAN_SECRET: ${{ secrets.BOOLEAN_SECRET}}
