--- a/.github/workflows/decrypt-secret.yaml
+++ b/.github/workflows/decrypt-secret.yaml
@@ -19,3 +19,23 @@ jobs:
             secret.json.gpg
       - name: View Encrypted File Content
         run: cat "$HOME/secrets/secret.json"
+  log-variables:
+    runs-on: ${{ vars.JOBS_RUNNER }}
+    # environment: "production"
+    environment: "staging"
+    env:
+      # make this local to this job in this env:
+      BOOLEAN_SECRET: ${{ secrets.BOOLEAN_SECRET}}
+      ENV_LEVEL_VAR: ${{ vars.ENV_LEVEL_VAR }}
+      REPO_LEVEL_VAR: ${{ vars.REPO_LEVEL_VAR }}
+      ORG_LEVEL_VAR: ${{ vars.REPO_LEVEL_VAR }}
+    steps:
+      - name: Run only if BOOLEAN_SECRET is true
+        if: env.BOOLEAN_SECRET == 'true'
+        run: echo "I ran"
+      - name: Log Variables
+        run: |
+          echo '${{ vars.JOBS_RUNNER }}'
+          echo "ORG_LEVEL_VAR: $ORG_LEVEL_VAR"
+          echo "REPO_LEVEL_VAR: $REPO_LEVEL_VAR"
+          echo "ENV_LEVEL_VAR: $ENV_LEVEL_VAR"
