Success on Write Permissions

--- a/.github/workflows/Github-Secret-Auto-Generated.yaml
+++ b/.github/workflows/Github-Secret-Auto-Generated.yaml
@@ -8,7 +8,7 @@ jobs:
   pr-comment:
     runs-on: ubuntu-latest
     permissions:
-      pull-requests: read
+      pull-requests: write
     # use actions/github-script to be able to create the pr comment.
     # behind the scenes this uses github token secret for authentication
     # this can be overriden by directly provide:
