Job Level Timeout

--- a/.github/workflows/Job-level-timout.yaml
+++ b/.github/workflows/Job-level-timout.yaml
@@ -1,3 +1,6 @@
+---
+#------------------------------------------------------------------
+# Always() and cancelled() will run
 name: Job Level Timeout
 on: [push]
 
