--- a/.github/workflows/matrix-fail-fast-false-experimental.yaml
+++ b/.github/workflows/matrix-fail-fast-false-experimental.yaml
@@ -36,9 +36,14 @@ jobs:
       fail-fast: false
     runs-on: ${{ matrix.os }}
     steps:
-      - run: node -v
-      - run: echo '${{ toJson(matrix)}}'
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-      - run: node -v
+
+      - name: Show Matrix
+        run: echo '${{ toJson(matrix)}}'
+
+      - name: Node Version
+        run: node -v
