--- a/.github/workflows/matrix-fail-fast-false-experimental.yaml
+++ b/.github/workflows/matrix-fail-fast-false-experimental.yaml
@@ -41,6 +41,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
+          architecture: "x64"
 
       - name: Show Matrix
         run: echo '${{ toJson(matrix)}}'
