--- a/.github/workflows/concurrency-1.yaml
+++ b/.github/workflows/concurrency-1.yaml
@@ -20,7 +20,7 @@ on:
 # staging/production will run concurrently
 #----------------------------------------------------------------------------
 concurrency:
-  group: ${{ github.event.inputs.environment }}
+  group: ${{ github.workflow }}-${{ github.event.inputs.environment }}
   cancel-in-progress: true
 jobs:
   sleep:
