--- a/.github/workflows/using-reusable-workflows.yaml
+++ b/.github/workflows/using-reusable-workflows.yaml
@@ -20,3 +20,11 @@ jobs:
       name: ${{ inputs.name }} # my local inputs
     secrets:
       access-token: ${{ secrets.ACCESS_TOKEN }}
+
+  calling-a-reusable-wf-in-the-same-repo:
+    uses: ./.github/workflows/reusable-wf.yaml
+  using-reusable-wf-output:
+    runs-on: ubuntu-latest
+    needs: calling-a-reusable-wf-in-the-same-repo
+    steps:
+      - run: echo ${{ needs.calling-a-reusable-wf-in-the-same-repo.outputs.date }}
