--- a/.github/workflows/local-wf-call-external-wf.yaml
+++ b/.github/workflows/local-wf-call-external-wf.yaml
@@ -7,6 +7,12 @@ on:
         value: ${{ jobs.generate-output.outputs.date }}
 
 jobs:
+  nested-workflow-call:
+    uses: Alaa-Organization/workflows/.github/workflows/reusable.yaml@main
+    with:
+      name: "kalas" # my local inputs
+    secrets:
+      access-token: ${{secrets.ACCESS_TOKEN}}
   generate-output:
     runs-on: ubuntu-latest
     outputs:
