--- a/.github/workflows/caching-and-artifacts.yaml
+++ b/.github/workflows/caching-and-artifacts.yaml
@@ -9,7 +9,7 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Use Axios
-        uses: actions/github-scripts@v6
+        uses: actions/github-script@v6
         with:
           script: |
             const axios ? require('axios')
