--- a/.github/workflows/caching-and-artifacts.yaml
+++ b/.github/workflows/caching-and-artifacts.yaml
@@ -11,7 +11,11 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ~/.npm
-          key: "npm-cache"
+          key: ${{runner.os}}-npm-cache-${{hashFiles('**package-lock.json')}}
+          # linux-npm-cache-34242414
+          restore-keys: |
+            ${{runner.os}}-npm-cache-
+            ${{runner.os}}-
       - name: Display Cache Output
         run: echo '${{ toJSON(steps.cache-dependencies.outputs) }}'
       - name: Install dependencies
