--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "axios": "^1.13.2",
     "lodash": "^4.17.21",
     "moment": "^2.30.1"
+  },
+  "devDependencies": {
+    "jest": "^30.2.0"
   }
 }
