--- a/.github/actions/hello-docker/Dockerfile
+++ b/.github/actions/hello-docker/Dockerfile
@@ -1,4 +1,4 @@
 FROM alpine:3.18
-COPY enptrypoint.sh /entrypoint.sh
+COPY entrypoint.sh /entrypoint.sh
 ENTRYPOINT ["/entrypoint.sh"]
 CMD ["World"]
