--- a/.github/workflows/uses-docker-action.yaml
+++ b/.github/workflows/uses-docker-action.yaml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Simple JS Action
+      - name: Simple Docker Action
         id: greet
         uses: ./.github/actions/hello-docker
         with:
