--- a/.github/actions/slack-joke/action.yaml
+++ b/.github/actions/slack-joke/action.yaml
@@ -30,7 +30,7 @@ runs:
       if: inputs.upload_joke
     - name: Upload the Joke
       if: inputs.upload_joke
-      uses: actions/upload-artifacts@v3
+      uses: actions/upload-artifact@v3
       with:
         name: joke
         path: joke.txt
