--- a/.github/actions/slack-joke/action.yaml
+++ b/.github/actions/slack-joke/action.yaml
@@ -19,8 +19,8 @@ runs:
       shell: bash
       id: joke
       run: |
-        EOF=$(head /dev/urandom | tr -dc 'A-Za-z0-9' | head -c 16)
-        echo "random_joke>>$EOF" >> "$GITHUB_OUTPUT"
+        EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
+        echo "random_joke<<$EOF" >> "$GITHUB_OUTPUT"
         curl -s https://icanhazdadjoke.com/ >> "$GITHUB_OUTPUT"
         echo "" >> "$GITHUB_OUTPUT"
         echo "$EOF" >> "$GITHUB_OUTPUT"
